--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
     <br>
     <div class="section">
     <section id="Cursos" style="background-color: whitesmoke;">
-    <h2 style="color: white;text-decoration: underline;"><big>Cursos</big></h2>
+    <h2 style="text-decoration: underline;"><big>Cursos</big></h2>
     <br>
     <div class="curses"><div class="cursos">
     <h2 style="color: white;"><big>Engenharia de software <img src="estacio.jpeg" alt="icon" width="40px" height="30px" style="border-radius: 10px 10px;box-shadow: 5px 5px 5px white;"></big></h2>
@@ -276,7 +276,7 @@
     <section id="Materias" style="background-color: white;">
     <h2><big>Materias</big></h2>
     <br>
-    <div class="summary"><div id="text"><details><summary style="background-color: white;border: 5px solid black;color: black;box-shadow: 6px 6px 6px red;">Engenharia de software <img src="estacio.jpeg" alt="icon" width="40px" height="30px" style="border-radius: 10px 10px;box-shadow: 5px 5px 5px white;"></summary>
+    <div class="summary"><div id="text"><details><summary style="background-color: blue;border: 5px solid white;color: white;box-shadow: 6px 6px 6px red;">Engenharia de software <img src="estacio.jpeg" alt="icon" width="40px" height="30px" style="border-radius: 10px 10px;box-shadow: 5px 5px 5px white;"></summary>
     <br>
     <caption><b style="color: red;">Cursadas</b></caption>
     <div class="table1">
@@ -304,7 +304,7 @@
     </div>
     </details></div></div>
     <br>
-    <div class="summary"><div id="text"><details><summary style="background-color: white;border: 5px solid black;color: black;box-shadow: 6px 6px 6px red;">Engenharia de software <img src="estacio.jpeg" alt="icon" width="40px" height="30px" style="border-radius: 10px 10px;box-shadow: 5px 5px 5px white;"></summary>
+    <div class="summary"><div id="text"><details><summary style="background-color: blue;border: 5px solid white;color: white;box-shadow: 6px 6px 6px red;">Engenharia de software <img src="estacio.jpeg" alt="icon" width="40px" height="30px" style="border-radius: 10px 10px;box-shadow: 5px 5px 5px white;"></summary>
     <br>
     <caption><b style="color: red;">Faltam</b></caption>
     <div class="table2">
