--- a/index.html
+++ b/index.html
@@ -518,7 +518,7 @@
     <br>
     <div class="footer">
     <footer style="background-color: darkcyan;">
-    @Guilherme-Barbosa-da-Silva, todos os direitos reservados.
+    <p style="color: white;">Guilherme-Barbosa-da-Silva,todos os direitos reservados</p>
     </footer>
     </div>
     <script src="script.js"></script>
