--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
     <p>Guilherme barbosa da silva,estudante de engenharia de software na <img src="estacio.jpeg" alt="icon" width="40px" height="30px" style="border-radius: 10px 10px;box-shadow: 5px 5px 5px white;"><a href="https://estacio.br/" target="_blank" rel="external" style="background-color: blue;color: white;border: 3px solid red;box-shadow: 4px 4px 4px white;border-radius: 10px 10px;text-decoration: none;text-shadow: 8px;"><b>Estácio</b></a> estou aprendendo sobre lógica da programação e desenvolvimento Full-Stack na <img src="Faisp.webp" alt="icon" width="40px" height="30px" style="border-radius: 10px 10px;box-shadow: 5px 5px 5px red;"><a href="https://faisp.edu.br/" target="_blank" rel="external" style="background-color: white;color: red;border: 3px solid black;box-shadow: 4px 4px 4px white;border-radius: 10px 10px;text-decoration: none;text-shadow: 8px;"><b>FAISP</b></a></p>
     <p>Desenvolvimento Full-Stack é uma área mais generalista que engloba tanto o front-end á interface do usúario, quanto o back end, o lado servidor que leva informações até o banco de dados o MY sql</p>
     </header>
+    </div>
     <br>
     <main>
     <div class="section">
