--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
 <style>
 .cronograma{table-layout: fixed;overflow-x: auto;width: 300px;white-space: nowrap;margin: auto;border-radius: 10px 10px;border: 5px solid white;box-shadow: 8px 8px 8px blue;}
 .certificados{table-layout: fixed;overflow-x: auto;width: 300px;white-space: nowrap;margin: auto;border-radius: 10px 10px;border: 5px solid black;box-shadow: 8px 8px 8px white;}
-.cursos{width: 220px;margin: auto;border-radius: 10px 10px;padding: 10px;align-items: center;justify-content: center;background-color: blue;border: 6px solid white;box-shadow: 8px 8px 8px black;}
+.cursos{width: 250px;margin: auto;border-radius: 10px 10px;padding: 10px;align-items: center;justify-content: center;background-color: blue;border: 6px solid white;box-shadow: 8px 8px 8px black;}
 .estacio{width: 220px;margin: auto;border-radius: 10px 10px;padding: 10px;align-items: center;justify-content: center;background-color: blue;border: 6px solid white;box-shadow: 8px 8px 8px blue;}
 .linguagens{width: 220px;margin: auto;border-radius: 10px 10px;padding: 10px;align-items: center;justify-content: center;background-color: black;border: 6px solid white;box-shadow: 8px 8px 8px yellow;}
 .table1{table-layout: fixed;overflow-y: auto;height: 200px;width: 300px;border-radius: 10px 10px;white-space: nowrap;border: 6px solid white;box-shadow: 8px 8px 8px blue;margin: auto;}
-.table2{table-layout: fixed;overflow-y: auto;height: 200px;width: 300px;border-radius: 10px 10px;white-space: nowrap;border: 6px solid white;box-shadow: 8px 8px 8px blueviolet;margin: auto;}
+.table2{table-layout: fixed;overflow-y: auto;height: 200px;width: 300px;border-radius: 10px 10px;white-space: nowrap;border: 6px solid red;box-shadow: 8px 8px 8px blueviolet;margin: auto;}
 .table3{table-layout: fixed;overflow-y: auto;height: 200px;width: 300px;border-radius: 10px 10px;white-space: nowrap;border: 6px solid white;box-shadow: 8px 8px 8px brown;margin: auto;}
 .table4{table-layout: fixed;overflow-y: auto;height: 200px;width: 300px;border-radius: 10px 10px;white-space: nowrap;border: 6px solid red;box-shadow: 8px 8px 8px brown;margin: auto;}
-.redes{width: 240px;margin: auto;border-radius: 10px 10px;cursor: pointer;gap: 4px;padding: 10px;display: flex;flex-direction: row;align-items: center;justify-content: center;background-color: white;box-shadow: 8px 8px 8px blueviolet;}
-.contatos{width: 240px;margin: auto;border-radius: 10px 10px;cursor: pointer;gap: 4px;padding: 10px;display: flex;flex-direction: row;align-items: center;justify-content: center;background-color: rgb(58, 55, 55);box-shadow: 8px 8px 8px yellow;}
+.redes{width: 260px;margin: auto;border-radius: 10px 10px;cursor: pointer;gap: 4px;padding: 10px;display: flex;flex-direction: row;align-items: center;justify-content: center;background-color: white;box-shadow: 8px 8px 8px blueviolet;}
+.contatos{width: 260px;margin: auto;border-radius: 10px 10px;cursor: pointer;gap: 4px;padding: 10px;display: flex;flex-direction: row;align-items: center;justify-content: center;background-color: rgb(58, 55, 55);box-shadow: 8px 8px 8px yellow;}
 </style>
 <body>
     <div class="menu" onclick="toggleMenu()">☰ Menu</div>
@@ -232,17 +232,17 @@
         <dd style="color: black;">EDUCAR PARA TRANSFORMAR</dd>
         <dt style="color: white;"><img src="fam valores.png" alt="icon" width="40px" height="40px" style="border-radius: 10px 10px;box-shadow: 6px 6px 6px yellow;">Valores</dt>
         <dt style="color: red;">Foco no aluno</dt>
-        <dd style="color: black;">O aluno é nossa razão de ser.</dd>
+        <dd style="color: white;">O aluno é nossa razão de ser.</dd>
         <dt style="color: red;">Gente e Meritocracia </dt>
-        <dd style="color: black;">Valorizamos e reconhecemos o mérito do maior ativo que possuímos: nossa gente.</dd>
+        <dd style="color: white;">Valorizamos e reconhecemos o mérito do maior ativo que possuímos: nossa gente.</dd>
         <dt style="color: red;">Inovação</dt>
-        <dd style="color: black;">Devemos criar e ousar sempre.</dd>
+        <dd style="color: white;">Devemos criar e ousar sempre.</dd>
         <dt style="color: red;">Simplicidade</dt>
-        <dd style="color: black;">Devemos ser simples para sermos ágeis e austeros.</dd>
+        <dd style="color: white;">Devemos ser simples para sermos ágeis e austeros.</dd>
         <dt style="color: red;">Resultado </dt>
-        <dd style="color: black;">Perseguimos resultados extraordinários com paixão e método, agindo sempre como “donos”.</dd>
+        <dd style="color: white;">Perseguimos resultados extraordinários com paixão e método, agindo sempre como “donos”.</dd>
         <dt style="color: red;">Ética</dt>
-        <dd style="color: black;">Não toleramos desvios de conduta.</dd>
+        <dd style="color: white;">Não toleramos desvios de conduta.</dd>
         <dt style="color: red;">Excelência </dt>
         <dd style="color: white;">Perseguimos a excelência na prestação de serviços dentro e fora da sala de aula.</dd>
         <dt style="color: red;">Hospitalidade</dt>
