--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <br>
     <div class="summary"><div id="text"><details><summary style="background-color: black;color: white;border: 4px solid white;box-shadow: 8px 8px 8px yellow;">Cronograma</summary>
     <br>
-    <caption><b style="background-color: black;">Cronograma</b></caption>
+    <caption><b style="background-color: black;color: white;border-radius: 10px 10px;text-shadow: 8px;">Cronograma</b></caption>
     <div class="cronograma">
     <table>
     <thead style="background-color: black;color: yellow;"><tr><td colspan="20">Cronograma</td></tr></thead>
