--- a/projetos.html
+++ b/projetos.html
@@ -8,7 +8,7 @@
     <title>Projetos</title>
 </head>
 <style>
-body{align-items: center;text-align: center;justify-content: center;margin: auto;background:linear-gradient(to right red,white,blue);}
+body{align-items: center;text-align: center;justify-content: center;margin: auto;background:linear-gradient(to right,white,blue,black);}
 h1{text-shadow: 8px;font-size: 30px;font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;font-style: oblique;color: white;text-decoration: underline;}
 h2{text-shadow: 8px;font-size: 20px;font-family: Arial, Helvetica, sans-serif;font-style: italic;color: black;}
 p{text-shadow: 8px;font-size: 15px;font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;font-style: inherit;color: white;}
