--- a/formulary.html
+++ b/formulary.html
@@ -18,7 +18,7 @@ summary{cursor: pointer;width: 100px;margin: auto;border-radius: 10px 10px;paddi
 form{align-items: center;justify-content: center;text-align: center;margin: auto;display: flex;flex-direction: column;}
 fieldset{width: 300px;margin: auto;border-radius: 10px 10px;padding: 20px;display: flex;flex-direction: column;align-items: center;justify-content: center;background-color: white;border: 5px solid blue;box-shadow: 5px 5px 5px red;}
 label{padding: 13px;margin: auto;text-align: left;font-size: 20px;font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;font-style: oblique;color: black;text-shadow: 8px;display: flex;flex-direction: column;}
-time:hover{transform: scale(1.04);transition: transform(0.4s);}
+.time:hover{transform: scale(1.04);transition: transform(0.4s);}
 #relogio{width: 220px;margin: auto;border-radius: 10px 10px;cursor: pointer;padding: 5px;background-color: brown;color: white;border: 5px solid white;box-shadow: 8px 8px 8px black;text-shadow: 8px;font-size: 20px;font-family: 'Times New Roman', Times, serif;font-style: initial;}
 .color1{width: 800px;gap: 4px;padding: 10px;display: flex;flex-direction: row;align-items: center;justify-content: center;text-align: center;background-color: black;border: 6px solid white;box-shadow: 7px 7px 7px red;}
 .color2{width: 900px;gap: 4px;padding: 10px;display: flex;flex-direction: row;align-items: center;justify-content: center;text-align: center;background-color: white;border: 6px solid black;box-shadow: 7px 7px 7px yellow;}
