--- a/formulary.html
+++ b/formulary.html
@@ -39,7 +39,7 @@ button{width: 250px;margin: auto;border-radius: 10px 10px;padding: 5px;text-shad
     <header><h1><big>Cadastro de <b>Brs</b></big></h1>
     <br>
     <div class="time">
-    <div id="Relogio"></div>
+    <div id="relogio"></div>
     </div>
     <br>
     </header>
